# insurance-quantile

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_databricks_pytest.py  run_databricks_pytest_v2.py  run_databricks_pytest_v3.py  run_databricks_pytest_v4.py  run_databricks_pytest_v5.py  run_databricks_pytest_v6.py  run_databricks_pytest_v7.py
benchmarks/: benchmark.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: benchmark.py  insurance_quantile_demo.py  run_tests.py
src/insurance_quantile/: __init__.py  _calibration.py  _es_regressor.py  _exceedance.py  _loading.py  _model.py  _robust.py  _tvar.py  _two_part.py  _types.py
src/insurance_quantile/eqrn/: __init__.py  diagnostics.py  gpd.py  intermediate.py  model.py  network.py
tests/: conftest.py  test_calibration.py  test_es_regressor.py  test_exceedance.py  test_expanded_coverage_1.py  test_loading.py  test_model.py  test_new_coverage.py  test_robust.py  test_tvar.py  test_two_part.py  test_types.py
tests/eqrn/: conftest.py  test_diagnostics.py  test_gpd.py  test_intermediate.py  test_model.py  test_network.py
