[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-quantile"
version = "0.3.4"
description = "Actuarial tail risk quantile and expectile regression for UK personal lines pricing, including EQRN extreme quantile neural nets (Pasche & Engelke 2024)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "actuarial",
    "quantile regression",
    "expectile",
    "catboost",
    "insurance",
    "tail risk",
    "tvar",
    "large loss",
    "gbm",
    "pricing",
    "extreme-value-theory",
    "neural-networks",
    "GPD",
    "reinsurance",
    "pytorch",
    "EQRN",
    "two-part model",
    "quantile premium principle",
    "safety loading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "polars>=1.0",
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
eqrn = [
    "torch>=2.0",
    "lightgbm>=4.0",
]
plot = ["matplotlib>=3.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-quantile"
Repository = "https://github.com/burning-cost/insurance-quantile"
Issues = "https://github.com/burning-cost/insurance-quantile/issues"
Documentation = "https://github.com/burning-cost/insurance-quantile#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_quantile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/insurance_quantile"]
